<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="none|vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="84dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/round_button"
        android:text="@string/button_divide"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button1"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="336dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/button_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="276dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/button_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="216dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/button_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button8" />

    <Button
        android:id="@+id/button2"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_2"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="276dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/button_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button3"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="336dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/button_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <Button
        android:id="@+id/button6"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="276dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/button_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button5" />

    <Button
        android:id="@+id/button9"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="216dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/button_9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:layout_constraintVertical_bias="0.052" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:background="@color/colorAccent"
        android:text="@string/button_equals"
        android:textColor="@android:color/white"
        android:visibility="visible"
        android:onClick="Equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,2:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:background="@color/colorAccent"
        android:onClick="Clear"
        android:text="@string/button_clear"
        android:textColor="@android:color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEquals"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonBackspace"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:background="@color/colorAccent"
        android:onClick="Backspace"
        android:text="@string/button_backspace"
        android:textColor="@android:color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonEquals" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="none"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonBLeft"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="84dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/round_button"
        android:text="@string/button_b_left"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonBRight"
        app:layout_constraintStart_toEndOf="@+id/buttonPlus" />

    <Button
        android:id="@+id/buttonBRight"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="84dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/round_button"
        android:text="@string/button_b_right"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultiply"
        app:layout_constraintStart_toEndOf="@+id/buttonBLeft" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="84dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/round_button"
        android:text="@string/button_multiply"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="84dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/round_button"
        android:text="@string/button_add"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonMinus" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="84dp"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:background="@drawable/round_button"
        android:text="@string/button_minus"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_decimal"
        app:layout_constraintEnd_toStartOf="@+id/button0"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />
</android.support.constraint.ConstraintLayout>